@@ -62,6 +62,12 @@ setAnnotationHubOption(arg, value)
       create a hub consisting only of previously downloaded resourcesd.
       Default: FALSE.}
 
+    \item{\dQuote{ASK}:}{logical(1). TRUE/FALSE should the AnnotationHub
+      ask if the hub location should be created. If FALSE, the default
+      location will be used and created if it doesn't exist without
+      asking. If TRUE will ask the user and if in a non interactive
+      session utilize a temporary directoy for the caching.
+      Default: TRUE.}
    }
 
   Default values may also be determined by system and global R
